# learn-haskell

./: .gitignore  README.md  package.yaml  stack.yaml
src/realworldhaskell/: .gitignore  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  ch2.hs  ch3.hs  ch4.hs  ch4FirstWordOfLines.hs  ch4FixLines.hs  ch4Interact.hs  ch4cli.hs  ch5Main.hs  ch6.hs  ch7-2.hs  ch7-3.hs  ch7-4.hs  ch7-5.hs  ch7.hs  pretty-json.cabal
src/realworldhaskell/ch5JSONLib/: JSONClass.hs  pretty-json.cabal
